--- a/ContactDatabase/Pages/Index.cshtml
+++ b/ContactDatabase/Pages/Index.cshtml
@@ -8,8 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <title>Contact Database</title>
 </head>
 <body>
     <div class="container">
