Updated queries and db

--- a/ContactDatabase/Pages/Index.cshtml
+++ b/ContactDatabase/Pages/Index.cshtml
@@ -47,6 +47,22 @@
                 <input type="checkbox" class="form-check-input" id="marriageStatus" name="MarriageStatus">
                 <label class="form-check-label" for="marriageStatus">Married</label>
             </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" id="username" name="Username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="Password" required>
+            </div>
+            <div class="form-group">
+                <label for="role">Role</label>
+                <select class="form-control" id="role" name="Role">
+                    <option value="normal">Normal</option>
+                    <option value="admin">Admin</option>
+                </select>
+            </div>
+
             <button type="submit" class="btn btn-primary">Add Contact</button>
         </form>
 
