--- a/ContactDatabase/Pages/Index.cshtml
+++ b/ContactDatabase/Pages/Index.cshtml
@@ -17,6 +17,6 @@
                 <input type="password" id="password" name="LoginInput.Password" class="form-control" required />
                 <div class="text-danger" asp-validation-summary="All"></div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
 </div>
